Image submission now runs automatically, and brings you right back to the upload screen for the next image. Status field added, with descriptive text for upload page.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,4 +5,5 @@
 </head>
 <body style="height: 100%; margin: 0; padding: 0;">
   <%= yield %>
+  <p style="font-style: italic;" id="status-box"><%= @status %></p>
 </body>
