--- a/views/form.erb
+++ b/views/form.erb
@@ -1,5 +1,5 @@
 <h1>Upload Image</h1>
 <form action="save_image" method="POST" enctype="multipart/form-data">
-  <input type="file" name="file">
+  <input type="file" name="file" id="img-file-upload">
   <input type="submit" value="Upload image">
 </form>
